# duckdb-playground

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled-1.txt  dev.duckdb  devcontainer.json  myfile.csv  old_Dockerfile_  profiles.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/dbt-playing-with-duckdb/: dbt_project.yml  dev.duckdb  profiles.yml
src/dbt-playing-with-duckdb/models/csv_to_parquet/: _csv__sources.yml  convert_to_parquet.sql  data.csv
src/dbt-playing-with-duckdb/models/csv_to_parquet_etc/: _csv__sources.yml  convert_to_csv.sql  convert_to_parquet.sql  data.csv  data.parquet
src/dbt-playing-with-duckdb/models/gmdata_s3/: _gmdata_s3__sources.yml  all_mrp_data.sql  count_mrp_data.sql  myfile.csv  sources.yml
src/dbt-playing-with-duckdb/models/public_data/: _public_data__sources.yml  eth_transactions_csv.sql  eth_transactions_parquet.sql  s3_eth_transactions_to_local_duckdb.sql
src/dbt-playing-with-duckdb/models/s3_to_local/: _public_data__sources.yml  s3_eth_transactions_to_local_csv.sql  s3_eth_transactions_to_local_parquet.sql
